core/src/main/java/de/lichtflut/rb/core/schema/parser/impl/osf/OSFParser.java
// $ANTLR 3.1.3 Mar 17, 2009 19:23:44 de/lichtflut/rb/core/schema/parser/impl/osf/OSF.g 2011-05-04 11:24:03

/*
 * Copyright (C) 2011 lichtflut Forschungs- und Entwicklungsgesellschaft mbH
 */
package de.lichtflut.rb.core.schema.parser.impl.osf;

import de.lichtflut.rb.core.schema.model.Cardinality;
import de.lichtflut.rb.core.schema.model.PropertyDeclaration;
import de.lichtflut.rb.core.schema.model.ResourceSchema;
import de.lichtflut.rb.core.schema.model.ResourceSchemaType;
import de.lichtflut.rb.core.schema.model.impl.ConstraintFactory;
import de.lichtflut.rb.core.schema.model.impl.PropertyAssertionImpl;
import de.lichtflut.rb.core.schema.model.impl.PropertyDeclarationImpl;
import de.lichtflut.rb.core.schema.model.impl.ResourceSchemaImpl;
import de.lichtflut.rb.core.schema.parser.RSErrorReporter;

import org.arastreju.sge.model.ElementaryDataType;
import java.util.HashSet;
import java.util.Set;



import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;



import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class OSFParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "STRING", "NUMBER", "ARRAY", "BOOLEAN", "TEXT", "COMMA", "TYPE", "MAX", "MIN", "REGEX", "CARDINALITY", "TRUE", "FALSE", "NULL", "PROPERTY", "RESOURCE", "DESCRIPTIONS", "PROPERTY_ASSERTION", "PROPERTY_DEC", "String", "Number", "Digit", "WS", "UnicodeEscape", "EscapeSequence", "HexDigit", "'{'", "'='", "'}'", "'['", "']'"
    };
    public static final int PROPERTY_DEC=22;
    public static final int NULL=17;
    public static final int NUMBER=5;
    public static final int MAX=11;
    public static final int PROPERTY_ASSERTION=21;
    public static final int REGEX=13;
    public static final int MIN=12;
    public static final int DESCRIPTIONS=20;
    public static final int TEXT=8;
    public static final int Digit=25;
    public static final int EOF=-1;
    public static final int HexDigit=29;
    public static final int RESOURCE=19;
    public static final int TRUE=15;
    public static final int TYPE=10;
    public static final int CARDINALITY=14;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int WS=26;
    public static final int T__33=33;
    public static final int BOOLEAN=7;
    public static final int T__34=34;
    public static final int Number=24;
    public static final int PROPERTY=18;
    public static final int COMMA=9;
    public static final int UnicodeEscape=27;
    public static final int String=23;
    public static final int FALSE=16;
    public static final int EscapeSequence=28;
    public static final int ARRAY=6;
    public static final int STRING=4;

    // delegates
    // delegators


        public OSFParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public OSFParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return OSFParser.tokenNames; }
    public String getGrammarFileName() { return "de/lichtflut/rb/core/schema/parser/impl/osf/OSF.g"; }



    	private RSErrorReporter errorReporter = null;
        public void setErrorReporter(RSErrorReporter errorReporter) {
            this.errorReporter = errorReporter;
        }
        public void emitErrorMessage(String msg) {
            errorReporter.reportError(msg);
        }



    public static class osl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "osl"
    // de/lichtflut/rb/core/schema/parser/impl/osf/OSF.g:77:1: osl : descriptions EOF -> ^( DESCRIPTIONS ( descriptions )? ) ;
    public final OSFParser.osl_return osl() throws RecognitionException {
        OSFParser.osl_return retval = new OSFParser.osl_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token EOF2=null;
        OSFParser.descriptions_return descriptions1 = null;


        CommonTree EOF2_tree=null;
        RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleSubtreeStream stream_descriptions=new RewriteRuleSubtreeStream(adaptor,"rule descriptions");
        try {
            // de/lichtflut/rb/core/schema/parser/impl/osf/OSF.g:77:6: ( descriptions EOF -> ^( DESCRIPTIONS ( descriptions )? ) )
            // de/lichtflut/rb/core/schema/parser/impl/osf/OSF.g:77:8: descriptions EOF
            {
            pushFollow(FOLLOW_descriptions_in_osl145);
            descriptions1=descriptions();

            state._fsp--;

            stream_descriptions.add(descriptions1.getTree());
            EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_osl147);  
            stream_EOF.add(EOF2);



            // AST REWRITE
            // elements: descriptions
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 77:26: -> ^( DESCRIPTIONS ( descriptions )? )
            {
                // de/lichtflut/rb/core/schema/parser/impl/osf/OSF.g:77:29: ^( DESCRIPTIONS ( descriptions )? )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(DESCRIPTIONS, "DESCRIPTIONS"), root_1);

                // de/lichtflut/rb/core/schema/parser/impl/osf/OSF.g:77:44: ( descriptions )?
                if ( stream_descriptions.hasNext() ) {
                    adaptor.addChild(root_1, stream_descriptions.nextTree());

                }
                stream_descriptions.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "osl"

    public static class descriptions_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "descriptions"
    // de/lichtflut/rb/core/schema/parser/impl/osf/OSF.g:80:1: descriptions : ( description ( COMMA description )* )? ;
    public final OSFParser.descriptions_return descriptions() throws RecognitionException {
        OSFParser.descriptions_return retval = new OSFParser.descriptions_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token COMMA4=null;
        OSFParser.description_return description3 = null;

        OSFParser.description_return description5 = null;


        CommonTree COMMA4_tree=null;

        try {
            // de/lichtflut/rb/core/schema/parser/impl/osf/OSF.g:81:2: ( ( description ( COMMA description )* )? )
            // de/lichtflut/rb/core/schema/parser/impl/osf/OSF.g:81:4: ( description ( COMMA description )* )?
            {
            root_0 = (CommonTree)adaptor.nil();

            // de/lichtflut/rb/core/schema/parser/impl/osf/OSF.g:81:4: ( description ( COMMA description )* )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( ((LA2_0>=PROPERTY && LA2_0<=RESOURCE)) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // de/lichtflut/rb/core/schema/parser/impl/osf/OSF.g:81:5: description ( COMMA description )*
                    {
                    pushFollow(FOLLOW_description_in_descriptions169);
                    description3=description();

                    state._fsp--;

                    adaptor.addChild(root_0, description3.getTree());
                    // de/lichtflut/rb/core/schema/parser/impl/osf/OSF.g:81:17: ( COMMA description )*
                    loop1:
                    do {
                        int alt1=2;
                        int LA1_0 = input.LA(1);

                        if ( (LA1_0==COMMA) ) {
                            alt1=1;
                        }


                        switch (alt1) {
                    	case 1 :
                    	    // de/lichtflut/rb/core/schema/parser/impl/osf/OSF.g:81:18: COMMA description
                    	    {
                    	    COMMA4=(Token)match(input,COMMA,FOLLOW_COMMA_in_descriptions172); 
                    	    pushFollow(FOLLOW_description_in_descriptions175);
                    	    description5=description();

                    	    state._fsp--;

                    	    adaptor.addChild(root_0, description5.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop1;
                        }
                    } while (true);


                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "descriptions"

    public static class description_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "description"
    // de/lichtflut/rb/core/schema/parser/impl/osf/OSF.g:83:1: description : ( property_dec -> ^( PROPERTY property_dec ) | resource_dec -> ^( RESOURCE resource_dec ) ) ;
    public final OSFParser.description_return description() throws RecognitionException {
        OSFParser.description_return retval = new OSFParser.description_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        OSFParser.property_dec_return property_dec6 = null;

        OSFParser.resource_dec_return resource_dec7 = null;


        RewriteRuleSubtreeStream stream_property_dec=new RewriteRuleSubtreeStream(adaptor,"rule property_dec");
        RewriteRuleSubtreeStream stream_resource_dec=new RewriteRuleSubtreeStream(adaptor,"rule resource_dec");
        try {
            // de/lichtflut/rb/core/schema/parser/impl/osf/OSF.g:83:14: ( ( property_dec -> ^( PROPERTY property_dec ) | resource_dec -> ^( RESOURCE resource_dec ) ) )
            // de/lichtflut/rb/core/schema/parser/impl/osf/OSF.g:84:2: ( property_dec -> ^( PROPERTY property_dec ) | resource_dec -> ^( RESOURCE resource_dec ) )
            {
            // de/lichtflut/rb/core/schema/parser/impl/osf/OSF.g:84:2: ( property_dec -> ^( PROPERTY property_dec ) | resource_dec -> ^( RESOURCE resource_dec ) )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==PROPERTY) ) {
                alt3=1;
            }
            else if ( (LA3_0==RESOURCE) ) {
                alt3=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }
            switch (alt3) {
                case 1 :
                    // de/lichtflut/rb/core/schema/parser/impl/osf/OSF.g:84:4: property_dec
                    {
                    pushFollow(FOLLOW_property_dec_in_description192);
                    property_dec6=property_dec();

                    state._fsp--;

                    stream_property_dec.add(property_dec6.getTree());


                    // AST REWRITE
                    // elements: property_dec
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 84:17: -> ^( PROPERTY property_dec )
                    {
                        // de/lichtflut/rb/core/schema/parser/impl/osf/OSF.g:84:20: ^( PROPERTY property_dec )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(PROPERTY, "PROPERTY"), root_1);

                        adaptor.addChild(root_1, stream_property_dec.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 2 :
                    // de/lichtflut/rb/core/schema/parser/impl/osf/OSF.g:85:4: resource_dec
                    {
                    pushFollow(FOLLOW_resource_dec_in_description205);
                    resource_dec7=resource_dec();

                    state._fsp--;

                    stream_resource_dec.add(resource_dec7.getTree());


                    // AST REWRITE
                    // elements: resource_dec
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 85:17: -> ^( RESOURCE resource_dec )
                    {
                        // de/lichtflut/rb/core/schema/parser/impl/osf/OSF.g:85:20: ^( RESOURCE resource_dec )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(RESOURCE, "RESOURCE"), root_1);

                        adaptor.addChild(root_1, stream_resource_dec.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "description"

    public static class property_dec_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "property_dec"
    // de/lichtflut/rb/core/schema/parser/impl/osf/OSF.g:90:1: property_dec : PROPERTY string ( '{' ( p_assertion '=' value ( COMMA p_assertion '=' value )* )? '}' )? -> ^( string PROPERTY_ASSERTION ( ^( p_assertion value ) )* ) ;
    public final OSFParser.property_dec_return property_dec() throws RecognitionException {
        OSFParser.property_dec_return retval = new OSFParser.property_dec_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token PROPERTY8=null;
        Token char_literal10=null;
        Token char_literal12=null;
        Token COMMA14=null;
        Token char_literal16=null;
        Token char_literal18=null;
        OSFParser.string_return string9 = null;

        OSFParser.p_assertion_return p_assertion11 = null;

        OSFParser.value_return value13 = null;

        OSFParser.p_assertion_return p_assertion15 = null;

        OSFParser.value_return value17 = null;


        CommonTree PROPERTY8_tree=null;
        CommonTree char_literal10_tree=null;
        CommonTree char_literal12_tree=null;
        CommonTree COMMA14_tree=null;
        CommonTree char_literal16_tree=null;
        CommonTree char_literal18_tree=null;
        RewriteRuleTokenStream stream_30=new RewriteRuleTokenStream(adaptor,"token 30");
        RewriteRuleTokenStream stream_32=new RewriteRuleTokenStream(adaptor,"token 32");
        RewriteRuleTokenStream stream_31=new RewriteRuleTokenStream(adaptor,"token 31");
        RewriteRuleTokenStream stream_PROPERTY=new RewriteRuleTokenStream(adaptor,"token PROPERTY");
        RewriteRuleTokenStream stream_COMMA=new RewriteRuleTokenStream(adaptor,"token COMMA");
        RewriteRuleSubtreeStream stream_p_assertion=new RewriteRuleSubtreeStream(adaptor,"rule p_assertion");
        RewriteRuleSubtreeStream stream_string=new RewriteRuleSubtreeStream(adaptor,"rule string");
        RewriteRuleSubtreeStream stream_value=new RewriteRuleSubtreeStream(adaptor,"rule value");
        try {
            // de/lichtflut/rb/core/schema/parser/impl/osf/OSF.g:91:2: ( PROPERTY string ( '{' ( p_assertion '=' value ( COMMA p_assertion '=' value )* )? '}' )? -> ^( string PROPERTY_ASSERTION ( ^( p_assertion value ) )* ) )
            // de/lichtflut/rb/core/schema/parser/impl/osf/OSF.g:91:4: PROPERTY string ( '{' ( p_assertion '=' value ( COMMA p_assertion '=' value )* )? '}' )?
            {
            PROPERTY8=(Token)match(input,PROPERTY,FOLLOW_PROPERTY_in_property_dec230);  
            stream_PROPERTY.add(PROPERTY8);

            pushFollow(FOLLOW_string_in_property_dec234);
            string9=string();

            state._fsp--;

            stream_string.add(string9.getTree());
            // de/lichtflut/rb/core/schema/parser/impl/osf/OSF.g:93:3: ( '{' ( p_assertion '=' value ( COMMA p_assertion '=' value )* )? '}' )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==30) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // de/lichtflut/rb/core/schema/parser/impl/osf/OSF.g:93:4: '{' ( p_assertion '=' value ( COMMA p_assertion '=' value )* )? '}'
                    {
                    char_literal10=(Token)match(input,30,FOLLOW_30_in_property_dec239);  
                    stream_30.add(char_literal10);

                    // de/lichtflut/rb/core/schema/parser/impl/osf/OSF.g:94:3: ( p_assertion '=' value ( COMMA p_assertion '=' value )* )?
                    int alt5=2;
                    int LA5_0 = input.LA(1);

                    if ( ((LA5_0>=TYPE && LA5_0<=CARDINALITY)) ) {
                        alt5=1;
                    }
                    switch (alt5) {
                        case 1 :
                            // de/lichtflut/rb/core/schema/parser/impl/osf/OSF.g:94:4: p_assertion '=' value ( COMMA p_assertion '=' value )*
                            {
                            pushFollow(FOLLOW_p_assertion_in_property_dec244);
                            p_assertion11=p_assertion();

                            state._fsp--;

                            stream_p_assertion.add(p_assertion11.getTree());
                            char_literal12=(Token)match(input,31,FOLLOW_31_in_property_dec246);  
                            stream_31.add(char_literal12);

                            pushFollow(FOLLOW_value_in_property_dec248);
                            value13=value();

                            state._fsp--;

                            stream_value.add(value13.getTree());
                            // de/lichtflut/rb/core/schema/parser/impl/osf/OSF.g:94:25: ( COMMA p_assertion '=' value )*
                            loop4:
                            do {
                                int alt4=2;
                                int LA4_0 = input.LA(1);

                                if ( (LA4_0==COMMA) ) {
                                    alt4=1;
                                }


                                switch (alt4) {
                            	case 1 :
                            	    // de/lichtflut/rb/core/schema/parser/impl/osf/OSF.g:94:26: COMMA p_assertion '=' value
                            	    {
                            	    COMMA14=(Token)match(input,COMMA,FOLLOW_COMMA_in_property_dec250);  
                            	    stream_COMMA.add(COMMA14);

                            	    pushFollow(FOLLOW_p_assertion_in_property_dec252);
                            	    p_assertion15=p_assertion();

                            	    state._fsp--;

                            	    stream_p_assertion.add(p_assertion15.getTree());
                            	    char_literal16=(Token)match(input,31,FOLLOW_31_in_property_dec254);  
                            	    stream_31.add(char_literal16);

                            	    pushFollow(FOLLOW_value_in_property_dec256);
                            	    value17=value();

                            	    state._fsp--;

                            	    stream_value.add(value17.getTree());

                            	    }
                            	    break;

                            	default :
                            	    break loop4;
                                }
                            } while (true);


                            }
                            break;

                    }

                    char_literal18=(Token)match(input,32,FOLLOW_32_in_property_dec265);  
                    stream_32.add(char_literal18);


                    }
                    break;

            }



            // AST REWRITE
            // elements: value, p_assertion, string
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 95:9: -> ^( string PROPERTY_ASSERTION ( ^( p_assertion value ) )* )
            {
                // de/lichtflut/rb/core/schema/parser/impl/osf/OSF.g:95:12: ^( string PROPERTY_ASSERTION ( ^( p_assertion value ) )* )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(stream_string.nextNode(), root_1);

                adaptor.addChild(root_1, (CommonTree)adaptor.create(PROPERTY_ASSERTION, "PROPERTY_ASSERTION"));
                // de/lichtflut/rb/core/schema/parser/impl/osf/OSF.g:95:40: ( ^( p_assertion value ) )*
                while ( stream_value.hasNext()||stream_p_assertion.hasNext() ) {
                    // de/lichtflut/rb/core/schema/parser/impl/osf/OSF.g:95:41: ^( p_assertion value )
                    {
                    CommonTree root_2 = (CommonTree)adaptor.nil();
                    root_2 = (CommonTree)adaptor.becomeRoot(stream_p_assertion.nextNode(), root_2);

                    adaptor.addChild(root_2, stream_value.nextTree());

                    adaptor.addChild(root_1, root_2);
                    }

                }
                stream_value.reset();
                stream_p_assertion.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "property_dec"

    public static class resource_dec_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "resource_dec"
    // de/lichtflut/rb/core/schema/parser/impl/osf/OSF.g:97:1: resource_dec : RESOURCE string '{' ( property_dec ( ',' property_dec )* )? '}' -> ^( string PROPERTY_DEC ( property_dec )* ) ;
    public final OSFParser.resource_dec_return resource_dec() throws RecognitionException {
        OSFParser.resource_dec_return retval = new OSFParser.resource_dec_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token RESOURCE19=null;
        Token char_literal21=null;
        Token char_literal23=null;
        Token char_literal25=null;
        OSFParser.string_return string20 = null;

        OSFParser.property_dec_return property_dec22 = null;

        OSFParser.property_dec_return property_dec24 = null;


        CommonTree RESOURCE19_tree=null;
        CommonTree char_literal21_tree=null;
        CommonTree char_literal23_tree=null;
        CommonTree char_literal25_tree=null;
        RewriteRuleTokenStream stream_30=new RewriteRuleTokenStream(adaptor,"token 30");
        RewriteRuleTokenStream stream_32=new RewriteRuleTokenStream(adaptor,"token 32");
        RewriteRuleTokenStream stream_COMMA=new RewriteRuleTokenStream(adaptor,"token COMMA");
        RewriteRuleTokenStream stream_RESOURCE=new RewriteRuleTokenStream(adaptor,"token RESOURCE");
        RewriteRuleSubtreeStream stream_property_dec=new RewriteRuleSubtreeStream(adaptor,"rule property_dec");
        RewriteRuleSubtreeStream stream_string=new RewriteRuleSubtreeStream(adaptor,"rule string");
        try {
            // de/lichtflut/rb/core/schema/parser/impl/osf/OSF.g:98:2: ( RESOURCE string '{' ( property_dec ( ',' property_dec )* )? '}' -> ^( string PROPERTY_DEC ( property_dec )* ) )
            // de/lichtflut/rb/core/schema/parser/impl/osf/OSF.g:98:4: RESOURCE string '{' ( property_dec ( ',' property_dec )* )? '}'
            {
            RESOURCE19=(Token)match(input,RESOURCE,FOLLOW_RESOURCE_in_resource_dec296);  
            stream_RESOURCE.add(RESOURCE19);

            pushFollow(FOLLOW_string_in_resource_dec300);
            string20=string();

            state._fsp--;

            stream_string.add(string20.getTree());
            char_literal21=(Token)match(input,30,FOLLOW_30_in_resource_dec304);  
            stream_30.add(char_literal21);

            // de/lichtflut/rb/core/schema/parser/impl/osf/OSF.g:101:3: ( property_dec ( ',' property_dec )* )?
            int alt8=2;
            int LA8_0 = input.LA(1);

            if ( (LA8_0==PROPERTY) ) {
                alt8=1;
            }
            switch (alt8) {
                case 1 :
                    // de/lichtflut/rb/core/schema/parser/impl/osf/OSF.g:101:4: property_dec ( ',' property_dec )*
                    {
                    pushFollow(FOLLOW_property_dec_in_resource_dec309);
                    property_dec22=property_dec();

                    state._fsp--;

                    stream_property_dec.add(property_dec22.getTree());
                    // de/lichtflut/rb/core/schema/parser/impl/osf/OSF.g:101:17: ( ',' property_dec )*
                    loop7:
                    do {
                        int alt7=2;
                        int LA7_0 = input.LA(1);

                        if ( (LA7_0==COMMA) ) {
                            alt7=1;
                        }


                        switch (alt7) {
                    	case 1 :
                    	    // de/lichtflut/rb/core/schema/parser/impl/osf/OSF.g:101:18: ',' property_dec
                    	    {
                    	    char_literal23=(Token)match(input,COMMA,FOLLOW_COMMA_in_resource_dec312);  
                    	    stream_COMMA.add(char_literal23);

                    	    pushFollow(FOLLOW_property_dec_in_resource_dec314);
                    	    property_dec24=property_dec();

                    	    state._fsp--;

                    	    stream_property_dec.add(property_dec24.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop7;
                        }
                    } while (true);


                    }
                    break;

            }

            char_literal25=(Token)match(input,32,FOLLOW_32_in_resource_dec323);  
            stream_32.add(char_literal25);



            // AST REWRITE
            // elements: property_dec, string
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 102:7: -> ^( string PROPERTY_DEC ( property_dec )* )
            {
                // de/lichtflut/rb/core/schema/parser/impl/osf/OSF.g:102:10: ^( string PROPERTY_DEC ( property_dec )* )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(stream_string.nextNode(), root_1);

                adaptor.addChild(root_1, (CommonTree)adaptor.create(PROPERTY_DEC, "PROPERTY_DEC"));
                // de/lichtflut/rb/core/schema/parser/impl/osf/OSF.g:102:32: ( property_dec )*
                while ( stream_property_dec.hasNext() ) {
                    adaptor.addChild(root_1, stream_property_dec.nextTree());

                }
                stream_property_dec.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "resource_dec"

    public static class p_assertion_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "p_assertion"
    // de/lichtflut/rb/core/schema/parser/impl/osf/OSF.g:106:1: p_assertion : ( TYPE -> TYPE | MAX -> MAX | MIN -> MIN | REGEX -> REGEX | CARDINALITY -> CARDINALITY );
    public final OSFParser.p_assertion_return p_assertion() throws RecognitionException {
        OSFParser.p_assertion_return retval = new OSFParser.p_assertion_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token TYPE26=null;
        Token MAX27=null;
        Token MIN28=null;
        Token REGEX29=null;
        Token CARDINALITY30=null;
